
2009-03-14 17:23 Ali aliov@xfce.org 
	 * : Added desktop file to be installed in xdt/autostart

2009-03-14 16:40 Ali aliov@xfce.org 
	 * : Idle function to reduce screen luminosity after a certain time+fix a bug in the adapter code

2009-03-13 16:31 Ali aliov@xfce.org 
	 * : Move common code to hal-device+ fix issue with the apater of the previous revision

2009-03-13 14:01 Ali aliov@xfce.org 
	 * : Dropping the libhal dependency, just doing simple proxy calls to get informations from hald

2009-03-11 20:38 Ali aliov@xfce.org 
	 * : Implement critical battery level settings+the option to disable lock screen when suspend/hibernate

2009-03-11 13:33 Ali aliov@xfce.org 
	 * : Set dpms to standby or suspend depending on the user settings

2009-03-11 13:06 Ali aliov@xfce.org 
	 * : Fix infinite loop caused by g_signal_connect+added advanced settings in the dialog

2009-03-10 21:13 Ali aliov@xfce.org 
	 * : properties shutdown,suspend and hibernate are noe strings in xfce4-power-manager channel configuration

2009-03-10 13:24 Ali aliov@xfce.org 
	 * : Handle critical battery charge+ update on the notifications

2009-03-10 10:11 Ali aliov@xfce.org 
	 * : Added Only show in XFCE in the autostart file and correct tooltip of a primary battery

2009-03-09 23:09 Ali aliov@xfce.org 
	 * : Changes in the battery tooltips/notifications

2009-03-09 13:22 Ali aliov@xfce.org 
	 * : Bump xfce dependencies version to 4.6.0

2009-03-09 10:33 Ali aliov@xfce.org 
	 * : Fix a Gtk Warning in the settings dialog

2009-03-08 20:48 Ali aliov@xfce.org 
	 * : Import of changes for what will be in time version 0.8
2009-02-18 11:00 Ali

	*: Added a panel brightness plugin directory,
	   Changed the version to 0.9.0 (Next version)

/* We start doing real Changelog from 18-02-2009 */
2009-02-06
	*: 0.6.1 release

2009-01-26
	*: 0.6.0 release

2008-06-08 19:30
	
	* : release candidate 1