@@ -1,0 +1,9 @@
+[Desktop Entry]
+_Name=Xfce Power Manager
+_Comment=Power management for the Xfce desktop
+Icon=gpm-ac-adapter
+Exec=xfce4-power-manager
+Terminal=false
+Type=Application
+OnlyShowIn=XFCE;
+StartupNotify=false
