@@ -1,4 +1,7 @@
 
+2009-03-14 19:26 Ali aliov@xfce.org 
+	 * : Added the missing desktop file, Thanks to Mike for pointing out
+
 2009-03-14 17:23 Ali aliov@xfce.org 
 	 * : Added desktop file to be installed in xdt/autostart
 
